--- a/prevention.css
+++ b/prevention.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #242529;
+    background-color: #8398f0;
 }
 
 .logo {
