--- a/statistics.css
+++ b/statistics.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #242529;
+    background-color: #011e92;
 }
 
 .logo {
