--- a/where.css
+++ b/where.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #242529;
+    background-color: #0f173a;
 }
 
 .logo {
