--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #242529;
 }
 
 .logo {
@@ -12,11 +11,19 @@
     width: auto;
 }
 
-li, a, button {
+li, a {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: #edf0f1;
+    color: gray;
+    text-decoration: none;
+}
+
+button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
     text-decoration: none;
 }
 
@@ -25,6 +32,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    background: #ffffff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -45,7 +54,7 @@ header {
 }
 
 .nav_links li a:hover{
-    color:#0088a9;
+    color:#000000;
 }
 
 button {
@@ -58,5 +67,5 @@ button {
 }
 
 button:hover {
-    background-color: rgba(0,136,169,0.8);
+    background-color: black
 }
