--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
     align-items: center;
     padding: 30px 10%;
     background: #ffffff;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 .5rem 1rem rgba(8, 8, 8, 0.1);
 }
 
 .logo {
@@ -59,7 +59,7 @@ header {
 
 button {
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color: gray;
     border: none;
     border-radius: 50px;
     cursor: pointer;
