--- a/style.css
+++ b/style.css
@@ -69,3 +69,32 @@ button {
 button:hover {
     background-color: black
 }
+
+section {
+    padding: 2rem 9%;
+}
+
+.home {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    min-height: 100vh;
+    align-items: center;
+    background:url(images/peace-background.jpeg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.home .content {
+    flex:1 1 40rem;
+}
+
+.home .image {
+    flex:1 1 40rem;
+}
+
+.home .image img{
+    width:100%
+}
+
+
