--- a/style.css
+++ b/style.css
@@ -101,11 +101,13 @@ section {
 
 @keyframes float {
     0%, 100%{
-        transform: translateY(0rem);
+        transform: translateY(4rem);
+        transform: translateX(3rem);
     }
 
     50%{
         transform: translateY(3rem);
+        transform: translateX(2rem);
     }
 }
 
