--- a/style.css
+++ b/style.css
@@ -1,9 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+:root{
+    --red: #ff3838;
+}
+
 * {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0; padding: 0;
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: all .2s linear;
+}
+*::selection {
+    background: var(--red);
+    color: #fff;;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+}
+
+body {
+    background: #f7f7f7;
+}
+
+header {
+    position: fixed;
+    top: 0; left: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #fff;
+    padding: 2rem 9%;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+}
+
+header .navbar a{
+    font-size: 2rem;
+    margin-left: 2rem;
+    color: #666;
+}
+
+header .navbar a:hover{
+    color: black;
+}
+
+#menu-bar {
+    font-size: 3rem;
+    cursor: pointer;
+    color: #666;
+    border:.1rem solid #666;
+    border-radius: .3rem;
+    padding:.5rem 1.5rem;
+    display: none;
 }
 
 .logo {
@@ -11,64 +68,7 @@
     width: auto;
 }
 
-li, a {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: gray;
-    text-decoration: none;
-}
 
-button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background: #ffffff;
-    box-shadow: 0 .5rem 1rem rgba(8, 8, 8, 0.1);
-}
-
-.logo {
-    cursor: pointer;
-}
-
-.nav_links {
-    list-style: none;
-}
-
-.nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover{
-    color:#000000;
-}
-
-button {
-    padding: 9px 25px;
-    background-color: gray;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-button:hover {
-    background-color: black
-}
 
 section {
     padding: 2rem 9%;
@@ -86,7 +86,7 @@ section {
 }
 
 .home .content {
-    flex:1 1 40rem;
+    flex: 1 1 40rem;
     padding-top: 6.5rem;
 }
 .home .image {
@@ -94,7 +94,7 @@ section {
     height: auto;
 }
 .home .image img{
-    width:75%;
+    width: 75%;
     padding: 1rem;
     animation: float 3s linear infinite;
 }
@@ -111,4 +111,49 @@ section {
     }
 }
 
+/* Media Queries */
 
+@media(max-width:991px){
+
+    html {
+    font-size: 55%;
+    }
+
+    header {
+    padding: 2rem;
+    }
+
+}
+
+@media(max-width:768px) {
+    #menu-bar {
+        display: initial;
+    }
+
+    header .navbar {
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #f7f7f7;
+        border-top:.1rem solid rgba(0,0,0,.1);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    header .navbar a {
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: block;
+        border:.2rem solid rgba(0,0,0,.1);
+        border-left: .5rem solid var(--red);
+    }  
+}
+
+@media(max-width:400px){
+
+    html {
+    font-size: 50%;
+    }
+}
