--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
     background: #f7f7f7;
 }
 
+section {
+    padding: 2rem 9%;
+}
+
 header {
     position: fixed;
     top: 0; left: 0;
@@ -68,12 +72,6 @@ header .navbar a:hover{
     width: auto;
 }
 
-
-
-section {
-    padding: 2rem 9%;
-}
-
 .home {
     display: flex;
     flex-wrap: wrap;
@@ -101,26 +99,138 @@ section {
 
 @keyframes float {
     0%, 100%{
-        transform: translateY(4rem);
-        transform: translateX(3rem);
+        transform: translateY(2rem);
     }
 
     50%{
         transform: translateY(3rem);
-        transform: translateX(2rem);
     }
 }
+
+.home .content h3 {
+    font-size: 5rem;
+    color: #fff;
+}
+
+.home .content p{
+    font-size: 1.7rem;
+    color: #fff;
+    padding: 1rem 0;
+}
+
+.btn {
+    display: inline-block;
+    padding: .8rem 3rem;
+    border: .2rem solid var(--red);
+    color: var(--red);
+    cursor: pointer;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 1rem;
+}
+
+.btn::before{
+    content: ' ';
+    position: absolute;
+    top: 0; right: 0;
+    width: 0%;
+    height: 100%;
+    background: var(--red);
+    transition: .3s linear;
+    z-index: -1;
+}
+
+.btn:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.btn:hover{
+    color: #fff;
+}
+
+
+
+
+
+/* Footer */
+
+.footer {
+    margin-top: 150px;
+    width: 100%;
+    padding: 100px 15%;
+    background: #333;
+    color: #efefef;
+    display: flex;
+}
+
+.footer div{
+    text-align: center;
+}
+.col-2 {
+    flex-grow: 2;
+}
+
+.footer div h3 {
+    font-weight: 300;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+.col-1 a {
+    display: block;
+    text-decoration: none;
+    color: #efefef;
+    margin: 10px;
+}
+
+form input {
+    width: 400px;
+    height: 45px;
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    outline: none;
+    border: none;
+}
+
+form button {
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
 
 /* Media Queries */
 
 @media(max-width:991px){
 
     html {
-    font-size: 55%;
+        font-size: 55%;
     }
 
     header {
-    padding: 2rem;
+        padding: 2rem;
+    }
+
+    section {
+        padding: 1rem;
     }
 
 }
@@ -154,6 +264,6 @@ section {
 @media(max-width:400px){
 
     html {
-    font-size: 50%;
+        font-size: 50%;
     }
-}
+}   
