--- a/style.css
+++ b/style.css
@@ -94,29 +94,39 @@ header .navbar a:hover{
 .home .image img{
     width: 75%;
     padding: 1rem;
-    animation: float 3s linear infinite;
+    animation: float3 2.5s linear;
 }
 
-@keyframes float {
-    0%, 100%{
-        transform: translateY(2rem);
+@keyframes float3{
+    0% {
+        display: none;
+        transform: translateY(55rem);
     }
-
-    50%{
-        transform: translateY(3rem);
+    100% {
+        transform: translateY(2rem);
     }
 }
 
 .home .content h3 {
     font-size: 5rem;
     color: #fff;
+    padding: .8rem 3rem;
+    background-color: rgb(130, 130, 130);
+    animation: float2 2s linear;
+    border-radius: 3rem;
+    margin-bottom: 10px;
 }
 
 .home .content p{
     font-size: 1.7rem;
     color: #fff;
     padding: 1rem 0;
+    padding: .8rem 3rem;
+    border-radius: 3rem;
+    background-color: rgb(130, 130, 130);
+    animation: float2 2.5s linear;
 }
+
 
 .btn {
     display: inline-block;
@@ -125,11 +135,22 @@ header .navbar a:hover{
     color: var(--red);
     cursor: pointer;
     font-size: 1.7rem;
-    border-radius: .5rem;
+    border-radius: 3rem;
     position: relative;
     overflow: hidden;
     z-index: 0;
     margin-top: 1rem;
+    animation: float2 3s linear;
+}
+
+@keyframes float2 {
+    0% {
+        display: none;
+        transform: translateY(55rem);
+    }
+    100% {
+        transform: translateY(1px);
+    }
 }
 
 .btn::before{
@@ -159,7 +180,6 @@ header .navbar a:hover{
 /* Footer */
 
 .footer {
-    margin-top: 150px;
     width: 100%;
     padding: 100px 15%;
     background: #333;
@@ -167,7 +187,7 @@ header .navbar a:hover{
     display: flex;
 }
 
-.footer div{
+.footer div {
     text-align: center;
 }
 .col-2 {
@@ -208,6 +228,48 @@ form button {
     cursor: pointer;
 }
 
+.col-1, .col-2, .col-3 h3 {
+    font-size: 25px;
+}
+
+.col-3 p {
+    text-transform: lowercase;
+    background-color: transparent;
+    font-size: 2rem;
+}
+
+#github-social {
+    margin-top: 30px;
+} #github-social i {
+    font-size: 22px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+#email-social {
+    margin-top: 30px;
+} #email-social i {
+    font-size: 25px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+#instagram-social {
+    margin-top: 30px;
+} #instagram-social i {
+    font-size: 22px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+#spotify-social {
+    margin-top: 30px;
+} #spotify-social i {
+    font-size: 22px;
+    margin: 10px;
+    cursor: pointer;
+}
+
 
 
 
@@ -232,7 +294,6 @@ form button {
     section {
         padding: 1rem;
     }
-
 }
 
 @media(max-width:768px) {
