--- a/statistics.css
+++ b/statistics.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+:root{
+    --red: #ff3838;
+}
+
 * {
     font-family: 'Montserrat', sans-serif;
     margin: 0; padding: 0;
@@ -10,71 +14,11 @@
     text-transform: capitalize;
     transition: all .2s linear;
 }
-
-body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #082032;
+*::selection {
+    background: var(--red);
+    color: #fff;;
 }
 
-.home .wrapper {
-    display: flex;
-}
-
-.home .wrapper .static-txt{
-    text-align: center;
-    color:#fff;
-    font-size: 64px;
-    font-weight: 400;
-}
-
-.home .wrapper .dynamic-txts {
-    margin-left: 15px;
-    line-height: 90px;
-    height: 90px;
-    overflow: hidden;
-}
-
-.home .dynamic-txts li {
-    list-style: none;
-    color: #ff4c29;
-    font-size: 54px;
-    font-weight: 500;
-    top: 0;
-    position: relative;
-    animation:  slide 12s steps(4) infinite;
-}
-
-@keyframes slide {
-    100% {
-        top: -360px;
-    }
-}
-
-
-.home .dynamic-txts li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #082032;
-    animation: typing 3s steps(23) infinite;
-}
-
-
-@keyframes typing {
-    40%, 60% {
-        left: calc(100% + 30px);
-    }
-    100% {
-        left: 0;
-    }
-}
-
-/* Navbar */
 html {
     font-size: 62.5%;
     overflow-x: hidden;
@@ -83,7 +27,7 @@ html {
 }
 
 body {
-    background: #082032
+    background: #f7f7f7;
 }
 
 section {
@@ -98,9 +42,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background:#082032;
+    background: #fff;
     padding: 2rem 9%;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
 header .navbar a{
@@ -127,6 +71,111 @@ header .navbar a:hover{
     height: 100;
     width: auto;
 }
+
+.home {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    min-height: 100vh;
+    align-items: center;
+    background:url(images/ezgif.com-gif-maker.gif) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.home .content {
+    flex: 1 1 40rem;
+    padding-top: 6.5rem;
+}
+.home .image {
+    width: 450px;
+    height: auto;
+}
+.home .image img{
+    width: 75%;
+    padding: 1rem;
+    animation: float3 2.5s linear;
+}
+
+@keyframes float3{
+    0% {
+        display: none;
+        transform: translateY(55rem);
+    }
+    100% {
+        transform: translateY(2rem);
+    }
+}
+
+.home .content h3 {
+    font-size: 5rem;
+    color: #fff;
+    padding: .8rem 3rem;
+    background-color: rgb(130, 130, 130);
+    animation: float2 2s linear;
+    border-radius: 3rem;
+}
+
+.home .content p{
+    font-size: 1.7rem;
+    color: #fff;
+    padding: 1rem 0;
+    padding: .8rem 3rem;
+    border-radius: 3rem;
+    background-color: rgb(130, 130, 130);
+    animation: float2 2.5s linear;
+}
+
+
+.btn {
+    display: inline-block;
+    padding: .8rem 3rem;
+    border: .2rem solid var(--red);
+    color: var(--red);
+    cursor: pointer;
+    font-size: 1.7rem;
+    border-radius: 3rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 1rem;
+    animation: float2 3s linear;
+    margin-bottom: 10px;
+}
+
+@keyframes float2 {
+    0% {
+        display: none;
+        transform: translateY(55rem);
+    }
+    100% {
+        transform: translateY(1px);
+    }
+}
+
+.btn::before{
+    content: ' ';
+    position: absolute;
+    top: 0; right: 0;
+    width: 0%;
+    height: 100%;
+    background: var(--red);
+    transition: .3s linear;
+    z-index: -1;
+}
+
+.btn:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.btn:hover{
+    color: #fff;
+}
+
+
+
+
 
 /* Footer */
 
@@ -220,3 +269,54 @@ form button {
     margin: 10px;
     cursor: pointer;
 }
+
+
+/* Media Queries */
+
+@media(max-width:991px){
+
+    html {
+        font-size: 55%;
+    }
+
+    header {
+        padding: 2rem;
+    }
+
+    section {
+        padding: 1rem;
+    }
+}
+
+@media(max-width:768px) {
+    #menu-bar {
+        display: initial;
+    }
+
+    header .navbar {
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #f7f7f7;
+        border-top:.1rem solid rgba(0,0,0,.1);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    header .navbar a {
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: block;
+        border:.2rem solid rgba(0,0,0,.1);
+        border-left: .5rem solid var(--red);
+    }  
+}
+
+@media(max-width:400px){
+
+    html {
+        font-size: 50%;
+    }
+}   
