--- a/statistics.css
+++ b/statistics.css
@@ -91,7 +91,7 @@ header .navbar a:hover{
 .home .wrapper .static-txt{
     text-align: center;
     color:#fff;
-    font-size: 59.99px;
+    font-size: 60px;
     font-weight: 400;
 }
 
@@ -106,7 +106,7 @@ header .navbar a:hover{
 .home .dynamic-txts li {
     list-style: none;
     color: #ff4c29;
-    font-size: 44px;
+    font-size: 34px;
     font-weight: 500;
     top: 0;
     position: relative;
@@ -151,8 +151,9 @@ header .navbar a:hover{
     border-radius: 3rem;
     background-color: rgb(94, 99, 118);
     animation: float2 2.5s linear;
-    margin-top: -330px;
+    margin-top: -290px;
     text-transform: none;
+    animation: float 2.5s linear;
 }
 
 .btn {
@@ -166,8 +167,19 @@ header .navbar a:hover{
     position: relative;
     overflow: hidden;
     z-index: 0;
-    margin-top: 150px;
+    margin-top: 125px;
     margin-bottom: none;
+    animation: float 3s linear;
+}
+
+@keyframes float {
+    0% {
+        display: none;
+        transform: translateY(55rem);
+    }
+    100% {
+        transform: translateY(2rem);
+    }
 }
 
 
