--- a/statistics.css
+++ b/statistics.css
@@ -82,134 +82,13 @@ header .navbar a:hover{
     background-size: cover;
     background-position: center;
 }
+ /* Scroll Animation Reveal Starts */
 
-/* Typing Animation Starts */
-.home .wrapper {
-    display: inline-flex;
-}
-
-.home .wrapper .static-txt{
-    text-align: center;
-    color:#fff;
-    font-size: 60px;
-    font-weight: 400;
-}
-
-.home .wrapper .dynamic-txts {
-    margin-left: 15px;
-    line-height: 90px;
-    height: 80px;
-    overflow: hidden;
-}
-
-
-.home .dynamic-txts li {
-    list-style: none;
-    color: #ff4c29;
-    font-size: 34px;
-    font-weight: 500;
-    top: 0;
-    position: relative;
-    animation:  slide 12s steps(4) infinite;
-}
-
-@keyframes slide {
-    100% {
-        top: -360px;
-    }
-}
-
-
-.home .dynamic-txts li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #082032;
-    animation: typing 3s steps(25) infinite;
-}
-
-
-@keyframes typing {
-    40%, 60% {
-        left: calc(100% + 30px);
-    }
-    100% {
-        left: 0;
-    }
-}
-
-/* Typing Animation Ends */
-
-/* Home Starts */
-.home .content p{
-    font-size:23px;
-    color: #fff;
-    padding: 1rem 0;
-    padding: .8rem 3rem;
-    border-radius: 3rem;
-    background-color: rgb(94, 99, 118);
-    animation: float2 2.5s linear;
-    margin-top: -290px;
-    text-transform: none;
-    animation: float 2.5s linear;
-}
-
-.btn {
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid var(--red);
-    color: var(--red);
-    cursor: pointer;
-    font-size: 1.7rem;
-    border-radius: 3rem;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-    margin-top: 125px;
-    margin-bottom: none;
-    animation: float 3s linear;
-}
-
-@keyframes float {
-    0% {
-        display: none;
-        transform: translateY(55rem);
-    }
-    100% {
-        transform: translateY(2rem);
-    }
-}
-
-
-.btn::before{
-    content: ' ';
-    position: absolute;
-    top: 0; right: 0;
-    width: 0%;
-    height: 100%;
-    background: var(--red);
-    transition: .3s linear;
-    z-index: -1;
-}
-
-.btn:hover::before {
-    width: 100%;
-    left: 0;
-}
-
-.btn:hover{
-    color: #fff;
-}
-
-/* Home Ends */
-
-/* Data Starts */
-/* Data Ends */
+    
 
 
 
+ /* Scroll Animation Reveal Ends */
 
 /* Footer */
 
