--- a/statistics.css
+++ b/statistics.css
@@ -129,7 +129,8 @@ section {
     max-width: 400px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 10px;
-    transform: translate(-80px, 50px);
+    transform: translate(-100px, 60px);
+    margin-left: -30px;
 }
 
 .content .text-box h3 {
