--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-    background: #f7f7f7;
+    background: white;
 }
 
 section {
@@ -35,14 +35,14 @@ section {
 }
 
 header {
-    position: fixed;
+    position: relative;
     top: 0; left: 0;
     right: 0;
     z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #fff;
+    background: transparent;
     padding: 2rem 9%;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
@@ -61,14 +61,12 @@ header .navbar a:hover{
     font-size: 3rem;
     cursor: pointer;
     color: #666;
-    border:.1rem solid #666;
-    border-radius: .3rem;
     padding:.5rem 1.5rem;
     display: none;
 }
 
 .logo {
-    height: 100;
+    height: 100; 
     width: auto;
 }
 
@@ -253,3 +251,47 @@ form button {
 }
 
 
+@media (max-width:991px) {
+    html {
+        font-size: 55%;
+    }
+
+    header {
+        padding: 2rem;
+    }
+
+}
+
+@media (max-width:768px) {
+    #menu-bar {
+        display: initial;
+    }
+
+    header .navbar {
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: white;
+        border-top: .1rem solid rgba(0,0,0,.1);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        transition: ease-in-out; 
+    }
+
+    header .navbar a {
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: block;
+        border: .2rem solid rgba(0,0,0,.1);
+        border-left: .5rem solid var(--red);
+        background: white; 
+    }
+}
+
+@media (max-width:400px) {
+    html {
+        font-size: 50%;
+    }
+}
