--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -76,7 +76,7 @@ header .navbar a:hover{
     gap: 1.5rem;
     min-height: 100vh;
     align-items: center;
-    background:url(images/ezgif.com-gif-maker.gif) no-repeat;
+    background: url(../images/ezgif.com-gif-maker.gif) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -92,9 +92,7 @@ header .navbar a:hover{
 .home .image img{
     width: 75%;
     padding: 1rem;
-    animation: float3 2.5s linear;
 }
-
 
 .home .content h3 {
     font-size: 5rem;
