--- a/TESTING/Home-Page/style.css
+++ b/TESTING/Home-Page/style.css
@@ -28,131 +28,14 @@ html {
 
 body {
     background: white;
-}
-
-section {
-    padding: 2rem 9%;
-}
-
-header {
-    position: relative;
-    top: 0; left: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: transparent;
-    padding: 2rem 9%;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-}
-
-header .navbar a{
-    font-size: 2rem;
-    margin-left: 2rem;
-    color: #666;
-}
-
-header .navbar a:hover{
-    color: black;
-}
-
-#menu-bar {
-    font-size: 3rem;
-    cursor: pointer;
-    color: #666;
-    padding:.5rem 1.5rem;
-    display: none;
-}
-
-.logo {
-    height: 100; 
-    width: auto;
-}
-
-.home {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    min-height: 100vh;
-    align-items: center;
-    background: url(../images/ezgif.com-gif-maker.gif) no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.home .content {
-    flex: 1 1 40rem;
-    padding-top: 6.5rem;
-}
-.home .image {
-    width: 450px;
-    height: auto;
-}
-.home .image img{
-    width: 75%;
-    padding: 1rem;
-}
-
-.home .content h3 {
-    font-size: 5rem;
-    color: #fff;
-    padding: .8rem 3rem;
-    background-color: rgb(130, 130, 130);
-    animation: float2 2s linear;
-    border-radius: 3rem;
-    margin-bottom: 2rem;
-}
-
-.home .content p{
-    font-size: 1.7rem;
-    color: #fff;
-    padding: 1rem 0;
-    padding: .8rem 3rem;
-    border-radius: 3rem;
-    background-color: rgb(130, 130, 130);
-    animation: float2 2.5s linear;
-}
-
-
-.btn {
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid var(--red);
-    color: var(--red);
-    cursor: pointer;
-    font-size: 1.7rem;
-    border-radius: 3rem;
-    position: relative;
     overflow: hidden;
-    z-index: 0;
-    margin-top: 1rem;
-    animation: float2 3s linear;
-    margin-bottom: 10px;
-}
-
-.btn::before{
-    content: ' ';
-    position: absolute;
-    top: 0; right: 0;
-    width: 0%;
-    height: 100%;
-    background: var(--red);
-    transition: .3s linear;
-    z-index: -1;
-}
-
-.btn:hover::before {
-    width: 100%;
-    left: 0;
-}
-
-.btn:hover{
-    color: #fff;
 }
 
 
+/* Hamburger menu start */
 
+
+/* Hamburger Menu End */
 
 
 /* Footer */
@@ -258,6 +141,10 @@ form button {
         padding: 2rem;
     }
 
+    .footer {
+        display: none;
+    }
+
 }
 
 @media (max-width:768px) {
@@ -286,10 +173,18 @@ form button {
         border-left: .5rem solid var(--red);
         background: white; 
     }
+
+    .footer {
+        display: none;
+    }
 }
 
 @media (max-width:400px) {
     html {
         font-size: 50%;
+    }
+
+    .footer {
+        display: none;
     }
 }
